--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "server": "json-server --watch backend/db.json --port 3001"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.18",
